<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_drawable"
    tools:context=".GetDetails">

    <TextView
        android:id="@+id/details_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_details_intro"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"/>


    <EditText
        android:id="@+id/details_bank"
        android:theme="@style/MyEditTextStyle"
        android:inputType="numberDecimal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/get_details_db_0"
        android:ems="20"
        android:layout_marginTop="20sp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/details_cash"
        android:theme="@style/MyEditTextStyle"
        android:inputType="numberDecimal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/get_details_db_1"
        android:ems="20"
        android:layout_marginTop="20sp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/details_ewallet"
        android:theme="@style/MyEditTextStyle"
        android:inputType="numberDecimal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/get_details_db_2"
        android:ems="20"
        android:layout_marginTop="20sp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""/>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClickDashboard"
        android:text="@string/next"
        android:elevation="20dp"
        android:background="@color/button_color"
        android:textColor="@color/white"
        android:textSize="20sp"/>
</LinearLayout>