<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_drawable"
    tools:context=".Gained">

    <TextView
        android:id="@+id/details_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_details"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/green_light"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="5dp">

            <EditText
                android:id="@+id/expense_name"
                android:theme="@style/MyEditTextStyle"
                android:inputType="text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/gained_name"
                android:ems="20"
                android:layout_marginTop="20sp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:autofillHints=""
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/expense_amount"
                android:theme="@style/MyEditTextStyle"
                android:inputType="numberDecimal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/expense_amount"
                android:ems="20"
                android:layout_marginTop="20sp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textAlignment="center"
                android:autofillHints=""
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/expense_d"
                android:theme="@style/MyEditTextStyle"
                android:inputType="text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/expense_date"
                android:ems="20"
                android:layout_marginTop="20sp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""/>

            <Spinner
                android:id="@+id/payment_mode"
                android:entries="@array/payment_modes"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="5dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="onClickGain"
                android:text="@string/add"
                android:background="@drawable/gainbutton"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>