<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/gradient_drawable"
    tools:context=".Dashboard">

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/getPoint"
        android:layout_marginLeft="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/summary"
                android:textSize="25sp"
                android:text="@string/summary"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/db_details_0"
                android:textSize="20sp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/db_details_1"
                android:textSize="20sp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/db_details_2"
                android:textSize="20sp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_2"
        android:layout_width="fill_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="50dp">

        <TextView
            android:id="@+id/actions"
            android:textSize="25sp"
            android:text="@string/actions"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <Button
                android:id="@+id/spent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:onClick="onClickAddActivity"
                android:text="@string/add_page"
                android:background="@drawable/mybutton"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp" />


            <Button
                android:id="@+id/gained"
                android:layout_toRightOf="@id/spent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:onClick="onClickGainedActivity"
                android:text="@string/credit_page"
                android:background="@drawable/gainbutton"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_toEndOf="@id/spent" />

            <Button
                android:id="@+id/update"
                android:layout_alignTop="@id/spent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:onClick="onClickAddActivity"
                android:text="@string/update_page"
                android:background="@drawable/updatebutton"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/view"
                android:layout_alignTop="@id/gained"
                android:layout_toRightOf="@id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:onClick="onClickViewData"
                android:text="@string/view_page"
                android:background="@drawable/viewbutton"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_toEndOf="@id/update" />



        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_marginTop="400dp"
        android:layout_height="30dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/bottom_text"
        android:textColor="@color/white"
        android:gravity="center_horizontal" />
</LinearLayout>