<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/gradient_drawable"
    tools:context=".Update">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/startText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>
        <Spinner
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/startText"
            android:layout_toEndOf="@+id/startText"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/endText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_text"
            android:layout_toRightOf="@+id/start_date"
            android:layout_toEndOf="@+id/start_date"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>
        <Spinner
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/endText"
            android:layout_toEndOf="@+id/endText" />
        <Button
            android:id="@+id/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startText"
            android:text="@string/go"
            android:background="@drawable/nextbutton"
            android:onClick="onClickDisplay"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/endText"
            android:layout_toRightOf="@+id/go_button"
            android:layout_toEndOf="@+id/go_button"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="1dp"
            android:text="@string/refresh"
            android:background="@drawable/nextbutton"
            android:onClick="onClickRefresh"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/scroll_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
        </LinearLayout>

    </ScrollView>
</LinearLayout>